# stremf

./: Cargo.toml  README.md
src/: config.rs  schema.rs
src/schema/: nuscenes.rs
src/schema/nuscenes/: annotation.rs
